--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
-﻿asgiref==3.8.1
+asgiref==3.8.1
 attrs==23.2.0
+autobahn==24.4.2
+Automat==24.8.1
 cachetools==5.5.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+constantly==23.10.4
 cryptography==42.0.5
+daphne==4.1.2
 defusedxml==0.7.1
 dj-database-url==2.1.0
 dj-rest-auth==6.0.0
@@ -24,7 +28,9 @@ google-auth-httplib2==0.2.0
 googleapis-common-protos==1.65.0
 gunicorn==22.0.0
 httplib2==0.22.0
+hyperlink==21.0.0
 idna==3.7
+incremental==24.7.2
 inflection==0.5.1
 jsonschema==4.22.0
 jsonschema-specifications==2024.10.1
@@ -37,6 +43,7 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
 PyJWT==2.8.0
+pyOpenSSL==24.2.1
 pyparsing==3.2.0
 pyrsistent==0.20.0
 python-decouple==3.8
@@ -48,9 +55,14 @@ requests==2.31.0
 requests-oauthlib==2.0.0
 rpds-py==0.20.0
 rsa==4.9
+service-identity==24.1.0
+setuptools==75.2.0
 sqlparse==0.5.0
+Twisted==24.7.0
+txaio==23.1.1
 typing_extensions==4.12.2
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.1
 whitenoise==6.6.0
+zope.interface==7.1.0
