--- a/Pipfile
+++ b/Pipfile
@@ -46,6 +46,7 @@ google-api-core = "==2.21.0"
 google-api-python-client = "==2.149.0"
 google-auth = "==2.35.0"
 google-auth-httplib2 = "==0.2.0"
+google-auth-oauthlib = "==1.2.1"
 googleapis-common-protos = "==1.65.0"
 [dev-packages]
 
