--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ google-api-core==2.21.0
 google-api-python-client==2.149.0
 google-auth==2.35.0
 google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
 googleapis-common-protos==1.65.0
 gunicorn==22.0.0
 httplib2==0.22.0
